# apollo-ai

./: .env.configured  .env.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  agent_builder.py  agents.py  auth.py  automations.py  campaigns.py  contacts.py  conversations.py  crm.py  deals.py  knowledge.py  messages.py  pipelines.py  templates.py  tenants.py  tools.py  uploads.py  webhooks.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  security.py  tenant_connection.py
backend/app/db/: __init__.py  redis.py  supabase.py
backend/app/schemas/: __init__.py  whatsapp.py
backend/app/services/: __init__.py  agent_builder.py  agent_test_runner.py  ai_orchestrator.py  audio_transcription.py  condition_evaluator.py  deal_manager.py  gateway_adapter.py  intelligent_delay.py  message_buffer.py  prompt_security.py  rag.py  reengagement.py  tenant_migration.py  tool_executor.py  uazapi.py  whatsapp_sender.py
backend/app/workers/: campaign_dispatcher.py  journey_processor.py
backend/migrations/: 001_master_schema.sql  002_client_schema.sql  003_client_schema_alignment.sql  004_campaigns_messaging.sql  005_ai_guardrails.sql  006_agent_builder.sql
docker/: Dockerfile.apollo-api  Dockerfile.backend  Dockerfile.frontend  docker-compose.prod.yml  nginx.conf  nginx.easypanel.conf  (+2 more)
(+153 files in other folders)
